--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
-# This file is a template, and might need editing before it works on your project.
-# Official framework image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/node/tags/
-image: node:latest
+language: node_js
 
-# This folder is cached between builds
-# http://docs.gitlab.com/ce/ci/yaml/README.html#cache
+node_js:
+  - "node"
+
 cache:
-  paths:
-  - node_modules/
+  directories:
+    - $HOME/.npm
+    - $HOME/.yarn-cache
 
-build_and_publish:
-  script:
-   - npm install
-   - npm run dist
+before_script:
+  - yarn
+
+script: npm run dist
