Configured for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,8 @@ cache:
 before_script:
   - yarn
 
-script: npm run dist
+script: npm run build
+
+after_success:
+  - node_modules/.bin/surge -p ./build/ -d https://friendom.surge.sh
+
