--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Maximilian Täschner <revdemiat@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "node_modules/.bin/webpack",
     "dist": "node_modules/.bin/webpack && node_modules/.bin/surge -p build/ -d https://friendom.surge.sh",
     "dev": "node_modules/.bin/webpack-dev-server"
   },
