--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "surge": "^0.18.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "whatwg-fetch": "^2.0.1"
   }
 }
